--- a/src/assets/allprojectdata.json
+++ b/src/assets/allprojectdata.json
@@ -15,7 +15,7 @@
       {
         "id":2,
         "project_name": "Music school",
-        "project_description": "This is a description of Project Beta, focused on creating a mobile application for fitness tracking.",
+        "project_description": "this an front model of an music school make with morden  animation and design  ",
         "photo_links": [
           "https://i.imgur.com/MRfmQRD.png",
           "https://i.imgur.com/v1y80ua.png"
