--- a/src/assets/allprojectdata.json
+++ b/src/assets/allprojectdata.json
@@ -9,7 +9,7 @@
           "https://i.imgur.com/sW2h3d5.png"
         ],
         "project_link":"https://kepapro.vercel.app/",
-        "video_link": "../../public/videos/kepapro.mp4",
+        "video_link": "/videos/kepapro.mp4",
         "project_Category":"fullstack"
       },
       {
