--- a/src/assets/allprojectdata.json
+++ b/src/assets/allprojectdata.json
@@ -21,7 +21,7 @@
           "https://i.imgur.com/v1y80ua.png"
         ],
         "project_link":"https://music-school-front-end.vercel.app/",
-        "video_link": "/src/assets/videos/musicschool.mp4",
+        "video_link": "/videos/musicschool.mp4",
         "project_Category":"frontend"
       },
       {
@@ -33,7 +33,7 @@
           "https://i.imgur.com/DZg9iZp.png"
         ],
         "project_link":"https://printrest.onrender.com/",
-        "video_link": "/src/assets/videos/printerst.mp4",
+        "video_link": "/videos/printerst.mp4",
         "project_Category":"fullstack"
       },
       {
@@ -45,7 +45,7 @@
           "https://i.imgur.com/yYqA2gV.png"
         ],
         "project_link":"https://music-school-front-end.vercel.app/",
-        "video_link": "/src/assets/videos/magma.mp4",
+        "video_link": "/videos/magma.mp4",
         "project_Category":"frontend"
       }
     
