--- a/src/assets/allprojectdata.json
+++ b/src/assets/allprojectdata.json
@@ -15,7 +15,7 @@
       {
         "id":2,
         "project_name": "Music school",
-        "project_description": "This is a description of Project Beta, focused on creating a mobile application for fitness tracking.",
+        "project_description": "Explore the remarkable animations of this music school's webpage, guaranteed to captivate and leave a lasting impression with its stunning visual experience. ",
         "photo_links": [
           "https://i.imgur.com/MRfmQRD.png",
           "https://i.imgur.com/v1y80ua.png"
