--- a/src/assets/allprojectdata.json
+++ b/src/assets/allprojectdata.json
@@ -44,7 +44,7 @@
           "https://i.imgur.com/bA7P2RL.png",
           "https://i.imgur.com/yYqA2gV.png"
         ],
-        "project_link":"https://music-school-front-end.vercel.app/",
+        "project_link":"https://kanishk1122.github.io/canvas-p-1/",
         "video_link": "/videos/magma.mp4",
         "project_Category":"frontend"
       }
