--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@lottiefiles/dotlottie-react": "^0.13.0",
     "@react-spring/three": "^9.7.3",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.165.0",
     "axios": "^1.7.2",
     "framer-motion": "^12.0.0-alpha.0",
-    "gsap": "^3.12.5",
+    "gsap": "^3.12.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.5.0",
     "react-redux": "^9.1.2",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
