--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@lottiefiles/dotlottie-react": "^0.13.0",
     "@react-spring/three": "^9.7.3",
     "@react-three/drei": "^9.107.0",
-    "@react-three/fiber": "^8.16.8",
+    "@react-three/fiber": "^8.18.0",
     "@types/three": "^0.165.0",
     "axios": "^1.7.2",
     "framer-motion": "^12.0.0-alpha.0",
     "gsap": "^3.12.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "postprocessing": "^6.37.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
