Refactor Home component: remove Navbar and 3D model layers; clean up layout
Delete unused MinimizeButton, SocialLinks, and TimeDisplay components

Update Projects component: integrate FullscreenVideo for improved video handling; enhance project display logic

Add FullscreenVideo component for better fullscreen video experience

Implement LeetCodeStats component: fetch and display LeetCode statistics with visual representation of difficulty and topic proficiency

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.23.1",
     "react-routing": "^0.0.7",
     "react-text-transition": "^3.1.0",
+    "recharts": "^3.6.0",
     "sort-by": "^1.2.0",
     "three": "^0.165.0"
   },
